--- a/src/main/res/layout/activity_splash.xml
+++ b/src/main/res/layout/activity_splash.xml
@@ -30,7 +30,10 @@
         android:src="@drawable/tipsy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
         android:layout_centerHorizontal="true" />
+
 
 
 </RelativeLayout>
